test/error/E7.2.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": [
		{
			"type": "hello:"
		}
	]
}
